Todos los projectos como modulos dentro de un workspace v2